--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -9,6 +9,8 @@ h1 { color: t.$lavender; }
   display: flex;
   justify-content: flex-end;
   align-items: center;
+  flex-wrap: wrap;
+  gap: 0.5rem;
   padding: 0 0.5rem;
   min-height: 2rem;
 
